--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/public/css/stylesheet.css">
+    <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:300' rel='stylesheet' type='text/css'>
   </head>
   <body>
     {{ content }}
